--- a/atv2408/style.css
+++ b/atv2408/style.css
@@ -1,16 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 body {
-    font-family: sans-serif;
+    font-family: 'Quicksand';
     color: #333;
 }
   
 header {
-    background-color: #000;
-    color: #fff;
-    padding: 20px;
-}
-  
-h1 {
-    font-size: 2em;
+    text-align: center;
+    font-family: arial;
+    background: linear-gradient(to right, rgb(0, 255, 255), rgb(255,0,255));
+    color: black;
 }
   
 img {
@@ -20,10 +19,6 @@ img {
   
 section {
     padding: 20px;
-}
-  
-h2 {
-    font-size: 1.5em;
 }
   
 p {
@@ -50,4 +45,10 @@ footer {
     background-color: #fff;
     color: #000;
     padding: 20px;
+    display: flex;
+}
+
+footer img{
+    width: 5%;
+    height: 5%;
 }
